[tool.poetry]
name = "replicatingllms"
version = "0.1.0"
description = ""
authors = ["Gerhard Stenzel <gerhard.stenzel@ifi.lmu.de>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
openai = "^1.30.5"
rich = "^13.7.1"
dotenv = "^0.0.5"
httpx = "^0.27.0"
numpy = "^1.26.4"
jellyfish = "^1.0.3"
fuzzywuzzy = "^0.18.0"
pandas = "^2.2.0"
pyarrow = "^16.1.0"
tqdm = "^4.66.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
